<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PizzaCustomizerActivity">

    <LinearLayout
        android:id="@+id/pizzaCustomizerWindow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/pizzaCustomizerMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/pizza_customizer"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <ImageView
            android:id="@+id/PizzaImage"
            android:layout_width="106dp"
            android:layout_height="76dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/pepperoni" />

        <RadioGroup
            android:id="@+id/flavorGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/deluxePizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deluxe" />

            <RadioButton
                android:id="@+id/pepperoniPizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pepperoni"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/hawaiianPizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hawaiian" />
        </RadioGroup>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/sizeGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:padding="5dp"
            app:selectionRequired="false"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/smallToggle"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateCosts"
                android:text="@string/small" />

            <com.google.android.material.chip.Chip
                android:id="@+id/mediumToggle"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateCosts"
                android:text="@string/medium" />

            <com.google.android.material.chip.Chip
                android:id="@+id/largeToggle"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateCosts"
                android:text="@string/large" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/toppingGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginBottom="25dp"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:onClick="calculateCosts"
            android:padding="5dp"
            app:chipSpacing="5dp"
            app:chipSpacingHorizontal="5dp"
            app:chipSpacingVertical="5dp"
            app:singleLine="false"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/bacon"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateCosts"
                android:text="@string/bacon"
                android:textSize="12sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/extra_cheese"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateCosts"
                android:text="@string/extra_cheese"
                android:textSize="12sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/tomato"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateCosts"
                android:text="@string/tomato"
                android:textSize="12sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/sausage"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateCosts"
                android:text="@string/sausage"
                android:textSize="12sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pineapple"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateCosts"
                android:text="@string/pineapple"
                android:textSize="12sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/peppers"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateCosts"
                android:text="@string/peppers"
                android:textSize="12sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pepperoni"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateCosts"
                android:text="@string/pepperoni"
                android:textSize="12sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/onions"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateCosts"
                android:text="@string/onions"
                android:textSize="12sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/mushrooms"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateCosts"
                android:text="@string/mushrooms"
                android:textSize="12sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ham"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateCosts"
                android:text="@string/ham"
                android:textSize="12sp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/black_olives"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="calculateCosts"
                android:text="@string/olives"
                android:textSize="12sp" />

        </com.google.android.material.chip.ChipGroup>

        <LinearLayout
            android:layout_width="334dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dollar" />

            <Button
                android:id="@+id/submitPizzaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitPizza"
                android:padding="15dp"
                android:text="@string/submit"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>